--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
         <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-start">
           <div class="col-md-9 ftco-animate pb-5">
           	<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span class="mr-2"><a href="contact.html">Contact<i class="ion-ios-arrow-forward"></i></a></span></p>
-            <h1 class="mb-3 bread">Complains & Suggestion.</h1>
+            <h1 class="mb-3 bread">Contact.</h1>
           </div>
         </div>
       </div>
